package abstractfactory;

public interface Button {
    void paint();
}