package abstractfactory;

public interface Checkbox {
    void paint();
}